--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "firebase": "^9.9.0",
     "pinia": "^2.0.14",
     "vee-validate": "^4.6.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
+    "vue-toastification": "^2.0.0-rc.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
