--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^9.9.0",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "vee-validate": "^4.6.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
