--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vueuse/core": "^8.9.3",
     "firebase": "^9.9.0",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^1.6.1",
